打印输出到页面
打印输出到页面，方便查看

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
 </head>
 <body style="height:2000px">
-	<h1>请打开控制台查看console log</h1>
+	<div id="root"></div>
 	<script src="public/bundle.js"></script>
 </body>
 </html>
